Openshift/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: default
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - frontend.apps.861af8397f.ccsd.ipz001.internal.bosch.cloud
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
